# Loreweave

./: .gitattributes  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: archivist.agent.md  harvester.agent.md  muse.agent.md  polisher.agent.md  scribe.agent.md  warden.agent.md
.github/instructions/: codex.instructions.md  lexicon.instructions.md  notes.instructions.md  sigil-hygiene.instructions.md  story.instructions.md
.github/prompts/: audit-consistency.prompt.md  new-chapter.prompt.md  new-character.prompt.md  new-glossary-term.prompt.md
.github/workflows/: build-desktop.yml  ci.yml  pages.yml  release.yml
apps/desktop/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/web/: splash.html
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/test/: helpers.test.ts
apps/web/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/server/: agents.ts  tools.ts
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/test/: catalog.test.ts  compose-lens.test.ts  echo-filter.test.ts  (+4 more)
docs/: conventions.md  kinds.md  loom.md  wave-everything.md
sagas/example-saga/: saga.yaml
scripts/: fetch-desktop-node.mjs  launch.mjs  stage-desktop-resources.mjs
(+110 files in other folders)
