[package]
name = "loreweave-desktop"
version = "0.1.0"
edition = "2021"
description = "Loreweave desktop shell (Tauri)."

[lib]
name = "loreweave_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
